# RainbowSim

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PLATFORMS.md  GITHUB_PAGES_DEPLOYMENT.md  Procfile  QUICKSTART.md  RainbowSim.code-workspace  SETUP_COMPLETE.md  VENV_SETUP.txt  app.json  build.sh  copilot-handoff-2026-03-09.md  create_zip.py  droplet.py  droplet2.py  droplet3.py  index.html  master copy.py  prism.py  rainbow-master.py  refraction.py  setup.sh
.github/workflows/: build.yml  deploy-pages.yml  deploy-railway.yml
Old_version/: RainbowSim.code-workspace  diffraction.py  dispersion.py  droplet.py  droplet2.py  fireworks.py  prism.py  rainbow-master.py  rainbow.py  refraction-wave.py  refraction.py
assets/: index-BGffYBxZ.css  index-CdzVYEIq.css  index-DBHHnzw0.js  index-DnoGz0fp.js
rainbow_web/: BUILD_INSTRUCTIONS.md  README.md  droplet2.py  main.py  prism.py  pyproject.toml  rainbow.py  raytrace.py  refraction.py  requirements.txt
src/rainbow_master/: rainbow-master.py  rainbow.py  refraction.py
src/rainbow_web/: index.html  package-lock.json  package.json
src/rainbow_web/src/: App.tsx  index.css
src/rainbow_web/src/app/: i18n.tsx  registry.ts  uiParams.ts  uiText.ts
src/rainbow_web/src/data/: rainbow_profile.generated.json  rainbow_profile.generated.ts
src/rainbow_web/src/descriptions/: README.md  renderer.tsx
src/rainbow_web/src/descriptions/content/: droplet.en.md  droplet.sv.md  droplet2.en.md  droplet2.sv.md  prism.en.md  prism.sv.md  rainbow.en.md  rainbow.sv.md  raytrace.en.md  (+3 more)
tools/: precompute_rainbow_profile.py
(+23 files in other folders)
