[build-system]
requires = ["pygbag"]
build-backend = "pygbag.build"

[project]
name = "RainbowSim"
version = "1.0.0"
description = "Physics simulator for light phenomena: refraction, prisms, rainbows, and more"
readme = "README.md"

[tool.pygbag]
title = "RainbowSim - Physics Simulator"
author = "Your Name"
description = "Interactive physics simulator for light phenomena"

[[tool.pygbag.build]]
name = "main"
title = "Physics Simulator"
